# bundle

./: CMakeLists.txt  README  bundler-helper.go
auth/: CMakeLists.txt
auth/conf/: com.linuxdeepin.bundle.filesystem.conf  com.linuxdeepin.bundle.filesystem.service  com.linuxdeepin.bundle.modulehelper.conf  com.linuxdeepin.bundle.modulehelper.service
auth/filesystem/: exceptions.go  filesytem_helper.go  mount.go  mount_info.go
auth/modulehelper/: kmod.c  module_helper.go
buildsystem/: build-bundle  build-bundle.conf  common
buildsystem/conf/: firefox-saucy.conf.local  trusty.conf
bundle/: bundle.go  bundle_helper.go  desktop.go  init.go  utils.go
data/: bundlelauncher.desktop  x-cb-bundle.xml
launchhelper/: CMakeLists.txt  Environment.c  Environment.h  FilesystemUtilities.c  FilesystemUtilities.h  LaunchHelper.c  Types.h  cmake_install.cmake
test/: test_conn_dbus.go  test_mount.go  test_mount_info.go  test_re.go
